--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Install latest tested rust version
+        uses: dtolnay/rust-toolchain@1.93
+        with:
+            components: rustfmt, clippy
       - name: Run cargo check
         run: cargo check --benches --tests --examples --all-features
       - name: Run cargo clippy
@@ -40,9 +44,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install MSRV
-        uses: dtolnay/rust-toolchain@master
+        uses: dtolnay/rust-toolchain@1.89
         with:
-            toolchain: "1.89"
             components: rustfmt, clippy
       - name: Check MSRV compatibility
         run: cargo check --all-features
